# kimetsu-bench

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
datasets/: prog-families-v1.json
scripts/: convert_beam.js  cost.sh
src/: driver.rs  main.rs  report.rs
src/drivers/: beam.rs  brainbench.rs  locomo.rs  longmemeval.rs  mod.rs  terminal_bench.rs
src/setup/: auth.rs  binary.rs  mod.rs
